src/objects/Mapping__c.object
<CustomObject>
    <description>This Object is used for mapping the templates(in DocuSign) based on Case Type and the Brand Code.</description>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Abbreviation__c</fullName>
        <label>Brand Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <label>Brand Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BC01</fullName>
                </value>
                <value>
                    <fullName>BC02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Union_Name__c</fullName>
        <label>Credit Union Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Template_ID__c</fullName>
        <label>DocuSign Template ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Case_Type__c</fullName>
        <label>Primary Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OPS</fullName>
                </value>
                <value>
                    <fullName>Shared Branch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Case_Type__c</fullName>
        <label>Secondary Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive Notices &amp; Escheatment</fullName>
                </value>
                <value>
                    <fullName>Ops Other</fullName>
                </value>
                <value>
                    <fullName>Checks</fullName>
                </value>
                <value>
                    <fullName>Tax Forms</fullName>
                </value>
                <value>
                    <fullName>ATM/Debit Cards</fullName>
                </value>
                <value>
                    <fullName>Holds</fullName>
                </value>
                <value>
                    <fullName>EPS Research</fullName>
                </value>
                <value>
                    <fullName>Branch Research</fullName>
                </value>
                <value>
                    <fullName>Call Center Research</fullName>
                </value>
                <value>
                    <fullName>Online Banking</fullName>
                </value>
                <value>
                    <fullName>Mobile Banking</fullName>
                </value>
                <value>
                    <fullName>Wires</fullName>
                </value>
                <value>
                    <fullName>Official Checks</fullName>
                </value>
                <value>
                    <fullName>Levies</fullName>
                </value>
                <value>
                    <fullName>Death Claims</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>Close Account</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>IRA</fullName>
                </value>
                <value>
                    <fullName>HSA</fullName>
                </value>
                <value>
                    <fullName>Shared Certificates</fullName>
                </value>
                <value>
                    <fullName>W8 Forms</fullName>
                </value>
                <value>
                    <fullName>W9 Forms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Contact_Details__c</fullName>
        <label>Support Contact Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tertiary_Case_Type__c</fullName>
        <label>Tertiary Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive Notices</fullName>
                </value>
                <value>
                    <fullName>W8 Forms</fullName>
                </value>
                <value>
                    <fullName>W9 Forms</fullName>
                </value>
                <value>
                    <fullName>IRA/HAS</fullName>
                </value>
                <value>
                    <fullName>Shared Certificates</fullName>
                </value>
                <value>
                    <fullName>Verification of Deposit</fullName>
                </value>
                <value>
                    <fullName>Stop Payment</fullName>
                </value>
                <value>
                    <fullName>Change of Address</fullName>
                </value>
                <value>
                    <fullName>Close Account</fullName>
                </value>
                <value>
                    <fullName>Signature Cards</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
                <value>
                    <fullName>Fiduciary</fullName>
                </value>
                <value>
                    <fullName>Arbitration Opt Out Letters</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous correspondence</fullName>
                </value>
                <value>
                    <fullName>Check Copies</fullName>
                </value>
                <value>
                    <fullName>Statement Copies</fullName>
                </value>
                <value>
                    <fullName>Fee Reversal</fullName>
                </value>
                <value>
                    <fullName>New Order</fullName>
                </value>
                <value>
                    <fullName>Lost Checks</fullName>
                </value>
                <value>
                    <fullName>Subpoenas</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Amendments</fullName>
                </value>
                <value>
                    <fullName>Duplicates</fullName>
                </value>
                <value>
                    <fullName>New Card</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
                <value>
                    <fullName>PIN</fullName>
                </value>
                <value>
                    <fullName>Lost/Stolen</fullName>
                </value>
                <value>
                    <fullName>Bill Pay</fullName>
                </value>
                <value>
                    <fullName>Finance Works</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Brand_Code__c</columns>
        <columns>Credit_Union_Name__c</columns>
        <columns>Brand_Abbreviation__c</columns>
        <columns>Object_Name__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Image_URL__c</columns>
        <columns>Primary_Case_Type__c</columns>
        <columns>Secondary_Case_Type__c</columns>
        <columns>Tertiary_Case_Type__c</columns>
        <columns>DocuSign_Template_ID__c</columns>
        <columns>Support_Contact_Details__c</columns>
        <columns>AutorabitExtId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Brand_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Brand_Abbreviation__c</columns>
        <columns>Brand_Code__c</columns>
        <columns>Credit_Union_Name__c</columns>
        <columns>Image_URL__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mapping__c.Brand_Details</value>
        </filters>
        <label>Brand Mapping</label>
    </listViews>
    <listViews>
        <fullName>DocuSign_Template_Case_Mapping</fullName>
        <columns>NAME</columns>
        <columns>Brand_Code__c</columns>
        <columns>Primary_Case_Type__c</columns>
        <columns>Secondary_Case_Type__c</columns>
        <columns>Tertiary_Case_Type__c</columns>
        <columns>DocuSign_Template_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mapping__c.DocuSign_Template_Case_Mapping</value>
        </filters>
        <label>DocuSign Template-Case Mapping</label>
    </listViews>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Template Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mapping</pluralLabel>
    <recordTypes>
        <fullName>Brand_Details</fullName>
        <active>true</active>
        <description>Used to map brand details</description>
        <label>Brand Details</label>
    </recordTypes>
    <recordTypes>
        <fullName>DocuSign_Template_Case_Mapping</fullName>
        <active>true</active>
        <description>Used to map DocuSign Templates to Cases</description>
        <label>DocuSign Template-Case Mapping</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>